# cedar-messaging-server-application/src/main/java/org/metadatacenter/cedar/messaging/resources/CommandResource.java
@@ -10,6 +10,7 @@ import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import io.dropwizard.hibernate.UnitOfWork;
+import org.metadatacenter.util.http.CedarError;
 import org.metadatacenter.config.CedarConfig;
 import org.metadatacenter.exception.CedarException;
 import org.metadatacenter.messaging.dao.PersistentUserMessageDAO;
@@ -54,8 +55,8 @@ public class CommandResource extends AbstractMessagingResource {
   @ApiResponses({
       @ApiResponse(responseCode = "200", description = "How many messages were marked read",
           content = @Content(schema = @Schema(ref = "#/components/schemas/UpdatedCount"))),
-      @ApiResponse(responseCode = "401", description = "Unauthorized"),
-      @ApiResponse(responseCode = "500", description = "Internal server error")
+      @ApiResponse(responseCode = "401", content = @Content(schema = @Schema(implementation = CedarError.class)), description = "Unauthorized"),
+      @ApiResponse(responseCode = "500", content = @Content(schema = @Schema(implementation = CedarError.class)), description = "Internal server error")
   })
   public Response markAllAsRead() throws CedarException {
     CedarRequestContext c = buildRequestContext();
